--- a/.github/workflows/ovc_option_c_schedule.yml
+++ b/.github/workflows/ovc_option_c_schedule.yml
@@ -19,6 +19,8 @@ jobs:
     runs-on: ubuntu-latest
     env:
       DATABASE_URL: ${{ secrets.DATABASE_URL }}
+      STRICT: ${{ github.event.inputs.strict || 'false' }}
+      SPOTCHECKS_ONLY: ${{ github.event.inputs.spotchecks_only || 'false' }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -72,10 +74,10 @@ jobs:
         run: |
           set -euo pipefail
           args=(--run-id "$RUN_ID")
-          if [[ "${{ inputs.strict }}" == "true" ]]; then
+          if [[ "${STRICT}" == "true" ]]; then
             args+=(--strict)
           fi
-          if [[ "${{ inputs.spotchecks_only }}" == "true" ]]; then
+          if [[ "${SPOTCHECKS_ONLY}" == "true" ]]; then
             args+=(--spotchecks-only)
           fi
           set +e
@@ -86,7 +88,7 @@ jobs:
             exit 0
           fi
           if [[ $exit_code -eq 1 ]]; then
-            if [[ "${{ inputs.strict }}" == "true" ]]; then
+            if [[ "${STRICT}" == "true" ]]; then
               exit 1
             fi
             echo "WARN status (non-strict); continuing."
