--- a/_quarantine/.github/workflows/ovc_full_ingest.yml
+++ b/_quarantine/.github/workflows/ovc_full_ingest.yml
@@ -34,6 +34,7 @@ jobs:
       NEON_DSN: ${{ secrets.NEON_DSN }}
       OANDA_API_TOKEN: ${{ secrets.OANDA_API_TOKEN }}
       OANDA_ENV: ${{ secrets.OANDA_ENV }}
+      VALIDATE_DATE_NY: ""
 
     steps:
       - name: Checkout
