--- a/tools/phase3_control_panel/package.json
+++ b/tools/phase3_control_panel/package.json
@@ -2,17 +2,30 @@
   "name": "phase3-control-panel",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "typecheck": "tsc -p tsconfig.json --noEmit"
+    "typecheck": "tsc -p tsconfig.json --noEmit",
+    "dev": "vite",
+    "dev:server": "tsx src/server/index.ts",
+    "build": "tsc -p tsconfig.json --noEmit && vite build",
+    "build:server": "tsc -p tsconfig.server.json",
+    "preview": "vite preview",
+    "start": "node dist/server/index.js"
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-router-dom": "^6.22.0",
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "typescript": "5.5.2",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.0",
-    "@types/node": "22.19.5"
+    "@types/node": "22.19.5",
+    "@types/express": "^4.17.21",
+    "vite": "^5.4.0",
+    "@vitejs/plugin-react": "^4.3.0",
+    "tsx": "^4.7.0"
   }
 }
