--- a/tools/phase3_control_panel/tsconfig.json
+++ b/tools/phase3_control_panel/tsconfig.json
@@ -7,8 +7,16 @@
     "lib": ["DOM", "DOM.Iterable", "ES2020"],
     "types": ["react", "react-dom", "node"],
     "noEmit": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "strict": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx"],
+  "include": ["src/**/*.ts", "src/**/*.tsx", "vite.config.ts"],
   "exclude": ["node_modules", "dist", "build"]
 }
