--- a/.github/workflows/append_sentinel.yml
+++ b/.github/workflows/append_sentinel.yml
@@ -1,10 +1,13 @@
 name: "CI: Append Sentinel Verify"
 
 on:
+  workflow_dispatch:
   pull_request:
+    branches:
+      - maintenance/sentinel
   push:
     branches:
-      - main
+      - maintenance/sentinel
 
 permissions:
   contents: read
